fixed username method